changes for new Znuny 7.0 layout

--- a/Kernel/Output/HTML/Templates/Standard/AgentDashboardMyTickets.tt
+++ b/Kernel/Output/HTML/Templates/Standard/AgentDashboardMyTickets.tt
@@ -1,127 +1,128 @@
 # --
-# Copyright (c) 2018- Perl-Services.de, https://www.perl-services.de
+# Copyright (C) 2001-2021 OTRS AG, https://otrs.com/
+# Copyright (C) 2021 Znuny GmbH, https://znuny.org/
+# Copyright (c) 2018 - 2023 Perl-Services.de, https://www.perl-services.de
 # Based on Kernel/Output/HTML/Templates/Standard/AgentDashboardTicketMyTicketsDashlet.tt copyright (c) 2014-2018 Mawoh GmbH
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
-# the enclosed file COPYING for license information (AGPL). If you
-# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
+# the enclosed file COPYING for license information (GPL). If you
+# did not receive this file, see https://www.gnu.org/licenses/gpl-3.0.txt.
 # --
 
 [% RenderBlockStart("ContentLargeTicketGenericFilter") %]
-<ul class="Tab Actions">
-    <li class="[% Data.item("New::Selected") | html %]"><a href="#" id="Dashboard[% Data.Name | html %]New" data-filter="New">[% Translate("New tickets") | html %] ([% Data.New | html %])</a></li>
-    <li class="[% Data.item("Open::Selected") | html %]"><a href="#" id="Dashboard[% Data.Name | html %]Open" data-filter="Open">[% Translate("Open tickets") | html %] ([% Data.Open | html %])</a></li>
-    <li class="[% Data.item("Reminder::Selected") | html %]"><a href="#" id="Dashboard[% Data.Name | html %]Reminder" data-filter="Reminder">[% Translate("Reminder tickets") | html %] ([% Data.Reminder | html %])</a></li>
-    <li class="[% Data.item("Pending::Selected") | html %]"><a href="#" id="Dashboard[% Data.Name | html %]Pending" data-filter="Pending">[% Translate("Pending tickets") | html %] ([% Data.Pending | html %])</a></li>
+    <div class="DashboardActions dropdown-container dropdown-filter">
+        <label class="btn-main btn-secondary-ghost btn-width-xxl btn-dropdown align-left" href="#" id="Dashboard[% Data.Name | html %]All" data-filter="All">
+            <span class="btn-wrapper space-between">
+                <span class="btn-text">
+                    <span class="regular">[% Translate('Show') | html %]:</span>
+                    <span class="bold"> &nbsp; [% Translate(Data.Filter.Label) | html %] ([% Data.Filter.Count | html %])</span>
+                </span>
+                <i class="fa fa-caret-down"></i>
+            </span>
+        </label>
+
+        <ul class="Tab Actions dropdown-menu">
+            <li class="[% Data.item("New::Selected") | html %] dropdown-item">
+                <a href="#" id="Dashboard[% Data.Name | html %]New" data-filter="New" data-filter-count="[% Data.New | html %]">[% Translate("New tickets") | html %] ([% Data.New | html %])</a>
+            </li>
+            <li class="[% Data.item("Open::Selected") | html %] dropdown-item">
+                <a href="#" id="Dashboard[% Data.Name | html %]Open" data-filter="Open" data-filter-count="[% Data.Open | html %]">[% Translate("Open tickets") | html %] ([% Data.Open | html %])</a>
+            </li>
+            <li class="[% Data.item("Reminder::Selected") | html %] dropdown-item">
+                <a href="#" id="Dashboard[% Data.Name | html %]Reminder" data-filter="Reminder" data-filter-count="[% Data.Reminder | html %]">[% Translate("Reminder tickets") | html %] ([% Data.Reminder | html %])</a>
+            </li>
+            <li class="[% Data.item("Pending::Selected") | html %] dropdown-item">
+                <a href="#" id="Dashboard[% Data.Name | html %]Pending" data-filter="Pending" data-filter-count="[% Data.Pending | html %]">[% Translate("Pending tickets") | html %] ([% Data.Pending | html %])</a>
+            </li>
 [% RenderBlockStart("ContentLargeTicketGenericFilterClosed") %]
-    <li class="[% Data.item("Closed::Selected") | html %]"><a href="#" id="Dashboard[% Data.Name | html %]Closed" data-filter="Closed">[% Translate("Closed tickets") | html %] ([% Data.Closed | html %])</a></li>
+            <li class="[% Data.item("Closed::Selected") | html %] dropdown-item">
+                <a href="#" id="Dashboard[% Data.Name | html %]Closed" data-filter="Closed" data-filter-count="[% Data.Closed | html %]">[% Translate("Closed tickets") | html %] ([% Data.Closed | html %])</a>
+            </li>
 [% RenderBlockEnd("ContentLargeTicketGenericFilterClosed") %]
 [% RenderBlockStart("ContentLargeTicketGenericFilterAll") %]
-    <li class="[% Data.item("All::Selected") | html %]"><a href="#" id="Dashboard[% Data.Name | html %]All" data-filter="All">[% Translate("All tickets") | html %] ([% Data.All | html %])</a></li>
+            <li class="[% Data.item("All::Selected") | html %] dropdown-item">
+                <a href="#" id="Dashboard[% Data.Name | html %]All" data-filter="All" data-filter-count="[% Data.All | html %]">[% Translate("All tickets") | html %] ([% Data.All | html %])</a>
+            </li>
 [% RenderBlockEnd("ContentLargeTicketGenericFilterAll") %]
-</ul>
-[% RenderBlockStart("ContentLargeTicketGenericFilterNavBar") %]
-<span class="Pagination">
-    [% Data.SiteNavBar %]
-</span>
-[% RenderBlockEnd("ContentLargeTicketGenericFilterNavBar") %]
+        </ul>
+    </div>
 [% RenderBlockEnd("ContentLargeTicketGenericFilter") %]
 
 #<!-- This form will not be submitted, we need it for the AJAX calls. -->
-<form action="[% Env("CGIHandle") %]" method="post" enctype="multipart/form-data">
+<form class="scroll-bar-styled" action="[% Env("CGIHandle") %]" method="post" enctype="multipart/form-data">
     <input type="hidden" name="CustomerID" value="[% Data.CustomerID | html %]"/>
+    <input type="hidden" name="CustomerUserID" value="[% Data.CustomerUserID | html %]"/>
     <input type="hidden" name="Filter[% Data.Name | html %]" id="Filter[% Data.Name | html %]" value="[% Data.FilterValue | html %]" />
+    <input type="hidden" name="AdditionalFilter[% Data.Name | html %]" id="AdditionalFilter[% Data.Name | html %]" value="[% Data.AdditionalFilterValue | html %]" />
     <table class="DataTable">
         <thead>
 [% RenderBlockStart("ContentLargeTicketGenericHeader") %]
             <tr>
-
 [% RenderBlockStart("GeneralOverviewHeader") %]
-
 [% RenderBlockStart("ContentLargeTicketGenericHeaderMeta") %]
-                <th class="DashboardHeader [% Data.CSS | html %]">
+                <th class="DashboardHeader [% Data.CSS | html %]" data-column="[% Data.HeaderColumnName | html %]" title="[% Translate(Data.Title) | html %]">
 [% RenderBlockStart("ContentLargeTicketGenericHeaderMetaLink") %]
-                    <a id="[% Data.HeaderColumnName | html %]OverviewControl[% Data.Name | html %]" name="[% Data.HeaderColumnName | html %]OverviewControl[% Data.Name | html %]" href="#" title="[% Data.Title | html %]" ></a>
+                    <a id="[% Data.HeaderColumnName | html %]FlagOverviewControl[% Data.Name | html %]" name="[% Data.HeaderColumnName | html %]OverviewControl[% Data.Name | html %]" href="#" title="[% Translate(Data.Title) | html %]"></a>
 [% RenderBlockEnd("ContentLargeTicketGenericHeaderMetaLink") %]
 [% RenderBlockStart("ContentLargeTicketGenericHeaderMetaEmpty") %]
                     <span title="[% Translate(Data.HeaderColumnName) | html %]"></span>
 [% RenderBlockEnd("ContentLargeTicketGenericHeaderMetaEmpty") %]
-
                 </th>
 [% RenderBlockEnd("ContentLargeTicketGenericHeaderMeta") %]
-
 [% RenderBlockStart("ContentLargeTicketGenericHeaderTicketHeader") %]
 [% RenderBlockStart("ContentLargeTicketGenericHeaderTicketNumberColumn") %]
                 <th class="DashboardHeader TicketNumber [% Data.CSS | html %]" data-column="TicketNumber">
                     <a id="TicketNumberOverviewControl[% Data.Name | html %]" name="TicketNumberOverviewControl[% Data.Name | html %]" href="#" title="[% Data.Title | html %]" >[% Config("Ticket::Hook") %]</a>
                 </th>
 [% RenderBlockEnd("ContentLargeTicketGenericHeaderTicketNumberColumn") %]
-
 [% RenderBlockStart("ContentLargeTicketGenericHeaderColumn") %]
                 <th class="DashboardHeader [% Data.HeaderColumnName | html %] [% Data.CSS | html %]" data-column="[% Data.HeaderColumnName | html %]">
 
 [% RenderBlockStart("ContentLargeTicketGenericHeaderColumnFilterLink") %]
+                    <a id="[% Data.HeaderColumnName | html %]OverviewControl[% Data.Name | html %]" name="[% Data.HeaderColumnName | html %]OverviewControl[% Data.Name | html %]" href="#" title="[% Data.Title | html %]" >[% Data.HeaderNameTranslated | html %]</a>
+
                     <a href="#" class="ColumnSettingsTrigger" title="[% Data.FilterTitle | html %]">
                         <i class="fa fa-filter"></i>
                     </a>
+
                     <div class="ColumnSettingsContainer">
                         <div class="ColumnSettingsBox">
                             [% Data.ColumnFilterStrg %]
-[% RenderBlockStart("ContentLargeTicketGenericHeaderColumnFilterLinkCustomerIDSearch") %]
-                            <input type="text" class="CustomerIDAutoComplete" autocomplete="off" />
-[% RenderBlockEnd("ContentLargeTicketGenericHeaderColumnFilterLinkCustomerIDSearch") %]
-
-[% RenderBlockStart("ContentLargeTicketGenericHeaderColumnFilterLinkUserSearch") %]
-                            <input type="text" class="UserAutoComplete" autocomplete="off" />
-[% RenderBlockEnd("ContentLargeTicketGenericHeaderColumnFilterLinkUserSearch") %]
                             <a href="#" class="DeleteFilter Hidden"><i class="fa fa-trash-o"></i></a>
                         </div>
                     </div>
-
-                    <a id="[% Data.HeaderColumnName | html %]OverviewControl[% Data.Name | html %]" name="[% Data.HeaderColumnName | html %]OverviewControl[% Data.Name | html %]" href="#" title="[% Data.Title | html %]" >[% Data.HeaderNameTranslated | html %]</a>
-
 [% RenderBlockEnd("ContentLargeTicketGenericHeaderColumnFilterLink") %]
-
 [% RenderBlockStart("ContentLargeTicketGenericHeaderColumnLink") %]
                     <a id="[% Data.HeaderColumnName | html %]OverviewControl[% Data.Name | html %]" name="[% Data.HeaderColumnName | html %]OverviewControl[% Data.Name | html %]" href="#" title="[% Data.Title | html %]" >[% Data.HeaderNameTranslated | html %]</a>
 [% RenderBlockEnd("ContentLargeTicketGenericHeaderColumnLink") %]
 
 [% RenderBlockStart("ContentLargeTicketGenericHeaderColumnFilter") %]
+                    <span class="Gray" title="[% Data.Title | html %]" >[% Data.HeaderNameTranslated | html %]</span>
                     <a href="#" class="ColumnSettingsTrigger" title="[% Data.FilterTitle | html %]">
                         <i class="fa fa-filter"></i>
                     </a>
                     <div class="ColumnSettingsContainer">
                         <div class="ColumnSettingsBox">
                             [% Data.ColumnFilterStrg %]
-[% RenderBlockStart("ContentLargeTicketGenericHeaderColumnFilterLinkCustomerUserSearch") %]
-                            <input type="text" class="CustomerUserAutoComplete" autocomplete="off" />
-[% RenderBlockEnd("ContentLargeTicketGenericHeaderColumnFilterLinkCustomerUserSearch") %]
                             <a href="#" class="DeleteFilter Hidden"><i class="fa fa-trash-o"></i></a>
                         </div>
                     </div>
-                    <span class="Gray" title="[% Data.Title | html %]" >[% Data.HeaderNameTranslated | html %]</span>
 [% RenderBlockEnd("ContentLargeTicketGenericHeaderColumnFilter") %]
-
 [% RenderBlockStart("ContentLargeTicketGenericHeaderColumnEmpty") %]
                     <span class="Gray" title="[% Data.Title | html %]" >[% Data.HeaderNameTranslated %]</span>
 [% RenderBlockEnd("ContentLargeTicketGenericHeaderColumnEmpty") %]
                 </th>
 [% RenderBlockEnd("ContentLargeTicketGenericHeaderColumn") %]
 [% RenderBlockEnd("ContentLargeTicketGenericHeaderTicketHeader") %]
-
 [% RenderBlockEnd("GeneralOverviewHeader") %]
-
             </tr>
-
 [% RenderBlockEnd("ContentLargeTicketGenericHeader") %]
         </thead>
 
         <tbody>
 [% RenderBlockStart("ContentLargeTicketGenericRow") %]
             <tr class="MasterAction">
-
 [% RenderBlockStart("GeneralOverviewRow") %]
-
 [% RenderBlockStart("ContentLargeTicketGenericRowMeta") %]
                 <td class="[% Data.ClassTable | html %] Flags" title="[% Translate(Data.Title) | html %]">
 [% RenderBlockStart("ContentLargeTicketGenericRowMetaImage") %]
@@ -143,7 +144,6 @@
 #                <div title="[% Data.Title | html %]">[% Data.Title | truncate(70) | html %]</div>
 #            </td>
 #            <td>[% Data.Time | html %]</td>
-
 [% RenderBlockStart("ContentLargeTicketGenericTicketColumn") %]
 [% RenderBlockStart("ContentLargeTicketGenericTicketNumber") %]
                 <td>
@@ -157,7 +157,7 @@
 [% RenderBlockEnd("ContentLargeTicketGenericEscalationTime") %]
 [% RenderBlockStart("ContentLargeTicketGenericColumn") %]
                 <td>
-                    <div title="[% Data.GenericValue | html %]">[% Data.GenericValue | truncate(78) | html %]</div>
+                    <div title="[% Data.GenericValue | html %]" class="[% Data.Class | html %]">[% Data.GenericValue | truncate(78) | html %]</div>
                 </td>
 [% RenderBlockEnd("ContentLargeTicketGenericColumn") %]
 [% RenderBlockStart("ContentLargeTicketTitle") %]
@@ -167,12 +167,12 @@
 [% RenderBlockEnd("ContentLargeTicketTitle") %]
 [% RenderBlockStart("ContentLargeTicketGenericColumnTranslatable") %]
                 <td>
-                    <div title="[% Translate(Data.GenericValue) | html %]">[% Translate(Data.GenericValue) | html %]</div>
+                    <div title="[% Translate(Data.GenericValue) | html %]" class="[% Data.Class | html %]">[% Translate(Data.GenericValue) | html %]</div>
                 </td>
 [% RenderBlockEnd("ContentLargeTicketGenericColumnTranslatable") %]
 [% RenderBlockStart("ContentLargeTicketGenericColumnTime") %]
                 <td>
-                    <div title="[% Data.GenericValue | Localize("TimeShort") | html %]">[% Data.GenericValue | Localize("TimeShort") %]</div>
+                    <div title="[% Data.GenericValue | Localize("TimeShort") | html %]">[% Data.GenericValue | Localize("TimeShort") | html %]</div>
                 </td>
 [% RenderBlockEnd("ContentLargeTicketGenericColumnTime") %]
 [% RenderBlockStart("ContentLargeTicketGenericColumnEscalation") %]
@@ -181,7 +181,6 @@
                 </td>
 [% RenderBlockEnd("ContentLargeTicketGenericColumnEscalation") %]
 [% RenderBlockEnd("ContentLargeTicketGenericTicketColumn") %]
-
 [% RenderBlockStart("ContentLargeTicketGenericDynamicField") %]
                 <td>
                     <div title="[% Data.Title | html %]">
@@ -194,9 +193,7 @@
                     </div>
                 </td>
 [% RenderBlockEnd("ContentLargeTicketGenericDynamicField") %]
-
 [% RenderBlockEnd("GeneralOverviewRow") %]
-
             </tr>
 [% RenderBlockEnd("ContentLargeTicketGenericRow") %]
 [% RenderBlockStart("ContentLargeTicketGenericNone") %]
@@ -209,4 +206,13 @@
         </tbody>
     </table>
 </form>
-
+[% RenderBlockStart("ContentLargeTicketGenericFilterNavBar") %]
+    <span class="Pagination">
+        <ul>
+            <li>
+                <span>[% Data.ResultLong %]</span>
+            </li>
+            <li class="page-links">[% Data.SiteNavBar %]</li>
+        </ul>
+    </span>
+[% RenderBlockEnd("ContentLargeTicketGenericFilterNavBar") %]
